tests/NormalTests/paczka1/fuzzy1/81100415.err
Error in line 4: 6twt7 S761 73,0
Error in line 6: 6twt7 S916 39,2
Error in line 22: drjpKoO S916 75,6
Error in line 32: drjpKoO S761 34,1
